<resources>
    <string name="app_name">BookShop</string>
    <string name="Id">BookID</string>
    <string name="Title">Title</string>
    <string name="Author">Author</string>
    <string name="Price">Price</string>
    <string name="Stock">Stock</string>
    <string name="ISBN">ISBN</string>
    <string name="Update">Update</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>

    <string name="createM">Create Member</string>
    <string name="viewM">View Member List</string>
    <string name="createB">Create Book</string>
    <string name="viewB">View BookList</string>
    <string name="confirm">Confirm</string>
    <string name="title" />
    <string name="member">MEMBER</string>
    <string name="book">BOOK</string>
    <string name="team01bookshop">Team01BookShop</string>
</resources>
