<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/createtv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Stock"
                android:textSize="18sp" />

            <EditText

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createET" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/createtv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createET2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/createtv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Author"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createET3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/createtv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ISBN"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createET4" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/createtv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Price"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createET5" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button android:id="@+id/CreateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createB"/>
        </TableRow>
    </TableLayout>
</LinearLayout>

